--- a/sales.html
+++ b/sales.html
@@ -22,5 +22,7 @@ Calculating the sum of these hourly totals; your output for each location should
 Total: 657 cookies -->
 
 <ul>
-  
+
 </ul>
+
+<script src="/js/app.js"></script>
