--- a/sales.html
+++ b/sales.html
@@ -20,7 +20,7 @@ Calculating the sum of these hourly totals; your output for each location should
 7pm: 57 cookies
 8pm: 29 cookies
 Total: 657 cookies -->
-<h1></h1>
+<h1 id="locationName"></h1>
 <ul>
 
 </ul>
