--- a/sales.html
+++ b/sales.html
@@ -20,6 +20,9 @@ Calculating the sum of these hourly totals; your output for each location should
 7pm: 57 cookies
 8pm: 29 cookies
 Total: 657 cookies -->
+<h1 id="locationName"></h1>
+<ul>
 
+</ul>
 
 <script src="/js/app.js"></script>
