Added html structure

--- a/sales.html
+++ b/sales.html
@@ -1,28 +1,27 @@
-<!-- Display the values of each array as unordered lists in the browser
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Salmon Cookies | Sales</title>
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/style.css">
+    </head>
 
-Calculating the sum of these hourly totals; your output for each location should look like this:
+    <body>
+        <header>
 
-1st and Pike
+        </header>
 
-6am: 16 cookies
-7am: 20 cookies
-8am: 35 cookies
-9am: 48 cookies
-10am: 56 cookies
-11am: 77 cookies
-12pm: 93 cookies
-1pm: 144 cookies
-2pm: 119 cookies
-3pm: 84 cookies
-4pm: 61 cookies
-5pm: 23 cookies
-6pm: 42 cookies
-7pm: 57 cookies
-8pm: 29 cookies
-Total: 657 cookies -->
-<h1 id="locationName"></h1>
-<ul>
+        <main>
+          <h1 id="locationName"></h1>
+          <ul>
+          
+          </ul>
+        </main>
 
-</ul>
+        <footer>
 
-<script src="/js/app.js"></script>
+        </footer>
+
+        <script src="js/app.js"></script>
+    </body>
+</html>
