--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <header>
-
+            <img src="https://raw.githubusercontent.com/codefellows/seattle-201d56/master/class-06/assets/salmon.png" alt="Fish">
         </header>
 
         <main>
@@ -19,6 +19,6 @@
 
         </footer>
 
-        <script src="js/app.js"></script>
+        <!--script src="js/app.js"></script-->
     </body>
 </html>
