--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My App</title>
+        <title>Pat's Salmon Cookies</title>
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     </head>
 
     <body>
-        <header>
-            <img src="https://raw.githubusercontent.com/codefellows/seattle-201d56/master/class-06/assets/salmon.png" alt="Fish">
+        <header id="header">
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                </ul>
+                
+                <img src="https://raw.githubusercontent.com/codefellows/seattle-201d56/master/class-06/assets/salmon.png" alt="Fish">
+                
+                <ul>
+                    <li>Merchandise</li>
+                    <li>Investor Data</li>
+                </ul>
+            </nav>
         </header>
 
         <main>
