Removed image from nav

--- a/index.html
+++ b/index.html
@@ -9,15 +9,11 @@
 
     <body>
         <header id="header">
+                <!-- <img src="https://raw.githubusercontent.com/codefellows/seattle-201d56/master/class-06/assets/salmon.png" alt="Fish"> -->
             <nav>
                 <ul>
                     <li>Home</li>
                     <li>About</li>
-                </ul>
-                
-                <img src="https://raw.githubusercontent.com/codefellows/seattle-201d56/master/class-06/assets/salmon.png" alt="Fish">
-                
-                <ul>
                     <li>Merchandise</li>
                     <li>Investor Data</li>
                 </ul>
