Moved nav elements into link

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
                 <!-- <img src="https://raw.githubusercontent.com/codefellows/seattle-201d56/master/class-06/assets/salmon.png" alt="Fish"> -->
             <nav>
                 <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Merchandise</li>
-                    <li>Investor Data</li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><span>Pat's Salmon Cookies</span></li>
+                    <li><a href="#">Merchandise</a></li>
+                    <li><a href="#">Investor Data</a></li>
                 </ul>
             </nav>
         </header>
