--- a/index.html
+++ b/index.html
@@ -9,16 +9,25 @@
 
     <body>
         <header id="header">
-                <!-- <img src="https://raw.githubusercontent.com/codefellows/seattle-201d56/master/class-06/assets/salmon.png" alt="Fish"> -->
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><span>Pat's Salmon Cookies</span></li>
-                    <li><a href="#">Merchandise</a></li>
-                    <li><a href="#">Investor Data</a></li>
-                </ul>
-            </nav>
+            <section>
+                <figure>
+                    <img src="https://raw.githubusercontent.com/codefellows/seattle-201d56/master/class-06/assets/salmon.png" alt="Fish">
+                </figure>
+                <h1>Pat's Salmon Cookies</h1>
+            </section>
+
+            <section>
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="#">Merchandise</a></li>
+                        <li><a href="#">Sales Data</a></li>
+                    </ul>
+                </nav>
+            </section>
         </header>
 
         <main>
