--- a/sales.html
+++ b/sales.html
@@ -12,10 +12,7 @@
         </header>
 
         <main>
-          <h1 id="locationName"></h1>
-          <ul>
-          
-          </ul>
+          <table></table>
         </main>
 
         <footer>
