--- a/sales.html
+++ b/sales.html
@@ -12,7 +12,7 @@
         </header>
 
         <main>
-          <table></table>
+          <table id="table"></table>
         </main>
 
         <footer>
