--- a/sales.html
+++ b/sales.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <!-- <header id="header">
+        <header id="header">
             <section>
                 <figure>
                     <img src="https://raw.githubusercontent.com/codefellows/seattle-201d56/master/class-06/assets/salmon.png" alt="Fish">
@@ -28,7 +28,7 @@
                     </ul>
                 </nav>
             </section>
-        </header> -->
+        </header>
 
         <main>
           <table id="table"></table>
