Added form to markup

--- a/sales.html
+++ b/sales.html
@@ -31,7 +31,27 @@
         </header>
 
         <main>
-          <table id="table"></table>
+            <form action="">
+                <fieldset>
+                    <legend>Add or Update a Store</legend>
+
+                    <label for="locationName">Location:</label>
+                    <input type="text" name="locationName">
+
+                    <label for="minCustomers">Minimum # of Customers:</label>
+                    <input type="text" name="minCustomers" id="">
+
+                    <label for="maxCustomers">Maximum # of Customers:</label>
+                    <input type="text" name="maxCustomers" id="">
+
+                    <label for="avgSale">Average # of Cookies Sold Per Sale:</label>
+                    <input type="text" name="avgSale" id="">
+
+                    <input type="submit" value="Submit">
+                </fieldset>
+            </form>
+            
+            <table id="table"></table>
         </main>
 
         <footer>
