--- a/sales.html
+++ b/sales.html
@@ -36,7 +36,7 @@
             </section>
 
             <section>
-                <form action="">
+                <form action="" id="updateForm">
                     <fieldset>
                         <legend>Add or Update a Store</legend>
     
