Added background image

--- a/index.html
+++ b/index.html
@@ -31,7 +31,21 @@
         </header>
 
         <main>
-
+            <figure>
+                <img src="./img/frosted-cookie.png" alt="frosted-cookie">
+            </figure>
+            <figure>
+                <img src="./img/frosted-cookie.png" alt="frosted-cookie">
+            </figure>
+            <figure>
+                <img src="./img/frosted-cookie.png" alt="frosted-cookie">
+            </figure>
+            <figure>
+                <img src="./img/frosted-cookie.png" alt="frosted-cookie">
+            </figure>
+            <figure>
+                <img src="./img/frosted-cookie.png" alt="frosted-cookie">
+            </figure>
         </main>
 
         <footer>
