Added fish image

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
     <header id="header">
+        <figure>
+            <img src="./img/salmon.png" alt="Fish">
+        </figure>
         <h1><a href="#home">Pat's Salmon Cookies</a></h1>
         
         <nav>
