--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
         </section>
 
         <section id="about">
-            <div>
+            <article>
                 <figure>
                     <img src="./img/family.jpg" alt="">
                 </figure>
                 <p>What is a salmon cookie, you may ask. Well, that's not as easy to define as one might think. You see, Pat's Salmon Cookies is a family business local to the city of Seattle and we use only the finest organic cage free salmon in our cookies. We make sure that all of the salmon we use have been treated humanely before we grind them into a fine powder and use them in our cookies.
                 Please note that that with Pat's Salmon Cookies you are getting all of the sweetness you expect with a cookie along with the healthy protiens and fats you would get with cooked salmon. So yes, Pat's Salmon Cookies are indeed cookies made of salmon, at the end of the day we like to think of our cookies expressions of love to you and yours. So why don't you drive over to one of our many locations and grab a few?
                 </p>
-            </div>
+            </article>
     
-            <div>
+            <article>
                 <table>
                     <tbody>
                         <tr>
@@ -78,11 +78,48 @@
                         </tr>
                     </tbody>
                 </table>
-            </div>
+            </article>
         </section>
 
         <section id="merchandise">
-            
+            <article>
+                <h1>The Goods</h1>
+                <h2>All funds we collect from merchandise sales will be contributed to the Adopt-A-Fish Foundation!</h2>
+                <div>
+                    <div>
+                        <p>"Salmon in Love" Shirt</p>
+                        <figure>
+                            <img src="./img/shirt.jpg" alt="">
+                            <figcaption>$25</figcaption>
+                        </figure>
+                        <button>Add to cart</button>
+                    </div>
+                    <div>
+                        <p>Fish Cookie Cutter</p>
+                        <figure>
+                            <img src="./img/cutter.jpg" alt="">
+                            <figcaption>$18</figcaption>
+                        </figure>
+                        <button>Add to cart</button>
+                    </div>
+                    <div>
+                        <p>"The Fish Pack"</p>
+                        <figure>
+                            <img src="./img/fish.jpg" alt="">
+                            <figcaption>$25000</figcaption>
+                        </figure>
+                        <button>Add to cart</button>
+                    </div>
+                </div>
+                <div>
+                    <p>Help this chinook find a home!</p>
+                    <figure>
+                        <img src="./img/chinook.jpg" alt="">
+                        <figcaption>$5000</figcaption>
+                    </figure>
+                    <button>Add to cart</button>
+                </div>
+            </article>
         </section>
 
         <section id="contact">
