--- a/sales.html
+++ b/sales.html
@@ -11,22 +11,9 @@
         <header id="header">
             <section>
                 <figure>
-                    <img src="https://raw.githubusercontent.com/codefellows/seattle-201d56/master/class-06/assets/salmon.png" alt="Fish">
+                    <img src="./img/salmon.png" alt="Fish">
                 </figure>
-                <h1>Pat's Salmon Cookies</h1>
-            </section>
-
-            <section>
-                <nav>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                    </ul>
-                    <ul>
-                        <li><a href="#">Merchandise</a></li>
-                        <li><a href="#">Sales Data</a></li>
-                    </ul>
-                </nav>
+                <h1><a href="./index.html">Pat's Salmon Cookies</a></h1>
             </section>
         </header>
 
